--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 	<main  class="container">
 		<video class="movie">
-			<source src="ext/video/360p.mp4" />
+			<source src="video/BigBuckBunny.mp4" />
 
 		</video>
 		<button>Play/Pause</button>
